# Meant-2B

./: .gitignore  CMakeLists copy.txt  CMakeLists-Mac-arm64.txt  CMakeLists-Mac-x64.txt  CMakeLists.txt  README.md
SaucerShoot/: Bullet.cpp  Bullet.h  Explosion.cpp  Explosion.h  GameOver.cpp  GameOver.h  GameStart.cpp  GameStart.h  Hero.cpp  Hero.h  Makefile  Points.cpp  Points.h  Reticle.cpp  Reticle.h  Saucer.cpp  Saucer.h  Star.cpp  Star.h  game.cpp
SaucerShoot/vs-2019/: saucer-shoot.vcxproj
dragonfly/include/: Animation.h  Box.h  Button.h  Clock.h  Color.h  Config.h  DisplayManager.h  EventCollision.h  EventCustomNetwork.h  EventKeyboard.h  EventKeyboardNetwork.h  EventMouse.h  EventMouseNetwork.h  EventNetwork.h  EventOut.h  EventPath.h  EventView.h  Firework.h  Fraps.h  GameManager.h  Grid.h  InputManager.h  Line.h  LogManager.h  Manager.h  Music.h  NetworkManager.h  NetworkNode.h  Object.h  ObjectList.h  ObjectListIterator.h  Particle.h  Path.h  PathFind.h  PathManager.h  Pause.h  Precipitation.h  QuadtreeNode.h  ResourceManager.h  SceneGraph.h  (+12 more)
game/: df-config.txt  difficultScoreBoard.txt  easyScoreBoard.txt  hardScoreBoard.txt  normalScoreBoard.txt
game/sprites/: ArrowLeft.txt  Bat.txt  Boss.txt  Boss2.txt  BossEye.txt  BossPart.txt  BossPart2.txt  BossProjectile.txt  BossUpgradedWeapon.txt  Click2Start.txt  Map0BG.txt  Map1BG.txt  Map2BG.txt  Map4BGGood.txt  Player-standing.txt  Player-walking.txt  Player.txt  Player1-standing.txt  Player1-walking.txt  Player2-standing.txt  Player2-walking.txt
game/src/: Arrow.cpp  Arrow.h  Bat.cpp  Bat.h  Block.cpp  Block.h  Boss.cpp  Boss.h  Boss2.cpp  Boss2.h  BossCrystal.cpp  BossCrystal.h  BossEye.cpp  BossEye.h  BossPart.cpp  BossPart.h  BossProjectile.cpp  BossProjectile.h  BossUpgradedWeapon.cpp  BossUpgradedWeapon.h  Bow.cpp  Bow.h  EventGate.cpp  EventGate.h  EventOpenGate.cpp  EventOpenGate.h  FragileBlock.cpp  FragileBlock.h  Gate.cpp  Gate.h  Inventory.cpp  Inventory.h  Lever.cpp  Lever.h  Map0.cpp  Map0.h  Map1.cpp  Map1.h  Map2.cpp  Map2.h  (+17 more)
